@@ -391,3 +391,4 @@ Revision	Version Updated		Log Message
 451		C++			Refactor a bunch of EU3 classes
 452		C++			Formatting of refactored classes
 453		C++			Refactor EU3Country
+454		C++			Refactor EU3World
